#!/usr/bin/env python
# (C) Copyright 2024 ECMWF.
#
# This software is licensed under the terms of the Apache Licence Version 2.0
# which can be obtained at http://www.apache.org/licenses/LICENSE-2.0.
# In applying this licence, ECMWF does not waive the privileges and immunities
# granted to it by virtue of its status as an intergovernmental organisation
# nor does it submit to any jurisdiction.

# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0"]

[project]
description = "A package to hold various functions to support training of ML models."
name = "anemoi-models"

dynamic = ["version"]
license = { file = "LICENSE" }
requires-python = ">=3.9"

authors = [
    { name = "European Centre for Medium-Range Weather Forecasts (ECMWF)", email = "software.support@ecmwf.int" },
]

keywords = ["tools", "models", "ai"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
]

dependencies = [

]

[project.optional-dependencies]


docs = [
    # For building the documentation
]

all = [
]

dev = [
    "sphinx",
    "sphinx_rtd_theme",
    "nbsphinx",
    "pandoc",
]

[project.urls]
Homepage = "https://github.com/ecmwf/anemoi-models/"
Documentation = "https://anemoi-models.readthedocs.io/"
Repository = "https://github.com/ecmwf/anemoi-models/"
Issues = "https://github.com/ecmwf/anemoi-models/issues"
# Changelog = "https://github.com/ecmwf/anemoi-models/CHANGELOG.md"


[tool.setuptools_scm]
version_file = "src/anemoi/models/_version.py"
