# (C) Copyright 2024 ECMWF.
#
# This software is licensed under the terms of the Apache Licence Version 2.0
# which can be obtained at http://www.apache.org/licenses/LICENSE-2.0.
# In applying this licence, ECMWF does not waive the privileges and immunities
# granted to it by virtue of its status as an intergovernmental organisation
# nor does it submit to any jurisdiction.

# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
description = "A package to hold various functions to support training of ML models."
name = "anemoi-models"
readme = "README.md"
dynamic = ["version"]
license = { file = "LICENSE" }
requires-python = ">=3.9"

authors = [
    { name = "European Centre for Medium-Range Weather Forecasts (ECMWF)", email = "software.support@ecmwf.int" },
]

keywords = ["tools", "models", "ai"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
]

dependencies = [
    "torch==2.3",
    "torch-geometric==2.4",
    "einops==0.6.1",
    "hydra-core==1.3",
    "anemoi-datasets==0.2.1",
    "anemoi-utils==0.1.9",
]

[project.optional-dependencies]


docs = [
    # For building the documentation
]

all = []

tests = ["pytest", "hypothesis"]

dev = [
    "sphinx",
    "sphinx_rtd_theme",
    "nbsphinx",
    "pandoc",
    "pytest",
    "hypothesis",
]

all = []

dev = []

[project.urls]
Homepage = "https://github.com/ecmwf/anemoi-models/"
Documentation = "https://anemoi-models.readthedocs.io/"
Repository = "https://github.com/ecmwf/anemoi-models/"
Issues = "https://github.com/ecmwf/anemoi-models/issues"
# Changelog = "https://github.com/ecmwf/anemoi-models/CHANGELOG.md"

[project.scripts]
# Add subcommand in the `commands` directory
anemoi-models = "anemoi.models.__main__:main"

[tool.setuptools_scm]
version_file = "src/anemoi/models/_version.py"
